tests/baselines/reference/multipleClassPropertyModifiersErrors.errors.txt
==== tests/cases/compiler/multipleClassPropertyModifiersErrors.ts (5 errors) ====
    class C {
        public public p1;
            ~~~~~~
!!! multipleClassPropertyModifiersErrors.ts(2,9): error TS1028: Accessibility modifier already seen.
        private private p2;
             ~~~~~~~
!!! multipleClassPropertyModifiersErrors.ts(3,10): error TS1028: Accessibility modifier already seen.
        static static p3;
            ~~~~~~
!!! multipleClassPropertyModifiersErrors.ts(4,9): error TS1030: 'static' modifier already seen.
        public private p4;
            ~~~~~~~
!!! multipleClassPropertyModifiersErrors.ts(5,9): error TS1028: Accessibility modifier already seen.
        private public p5;
             ~~~~~~
!!! multipleClassPropertyModifiersErrors.ts(6,10): error TS1028: Accessibility modifier already seen.
        public static p6;
        private static p7;
    }